# wasm-vs-js-mandlbrot

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs  logic.rs
www/: LICENSE-MIT  README.md  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
www/src/: index.html  index.js  index.scss
www/src/js/: consts.js  domops.js  mandelbrot.js
www/src/scss/: footer.scss  input.scss
