[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["taketakeyyy <taketakeyyy@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84" # JavaScriptからwasmの関数が呼べるようになる
js-sys = "0.3.40"       # JavaScriptの型とRustの型の変換
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true } # panicをsonsole.logに伝播する
wee_alloc = { version = "0.4.5", optional = true }                # 軽量なメモリアロケータ
hashbrown = "0.14.0"                                              # 高速なHashMap

[dependencies.web-sys]
version = "0.3.4"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
opt-level = 0

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
